feat : implementation for single list view
Signed-off-by: Tim Beckmann <Tim.Beckmann0610@gmail.com>

--- a/partials/meta.html
+++ b/partials/meta.html
@@ -6,7 +6,7 @@ SPDX-FileCopyrightText: 2025 Jonas Tobias Hopusch <git@jotoho.de>
 <meta charset="UTF-8" />
 <meta
   http-equiv="content-security-policy"
-  content="default-src 'self' https://cloud.appwrite.io"
+  content="default-src 'self' https://cloud.appwrite.io; connect-src 'self' https://cloud.appwrite.io wss://cloud.appwrite.io"
 />
 <meta name="color-scheme" content="dark light" />
 <meta name="application-name" content="https://github.com/jotoho/einkaufsapp" />
