--- a/partials/meta.html
+++ b/partials/meta.html
@@ -6,8 +6,7 @@ SPDX-FileCopyrightText: 2025 Jonas Tobias Hopusch <git@jotoho.de>
 <meta charset="UTF-8" />
 <meta
   http-equiv="content-security-policy"
-  content="default-src 'self' https://cloud.appwrite.io; connect-src 'self' https://cloud.appwrite.io wss://cloud.appwrite.io"
-/>
+  content="default-src 'self'; connect-src 'self' https://cloud.appwrite.io wss://cloud.appwrite.io https://*.openfoodfacts.org https://*.openfoodfacts.net"
 <meta name="color-scheme" content="dark light" />
 <meta name="application-name" content="https://github.com/jotoho/einkaufsapp" />
 <meta name="author" content="Jonas Tobias Hopusch, Tim Beckmann" />
