change: home link in standard header now redirects to dashboard if logged in
Signed-off-by: Jonas Tobias Hopusch <git@jotoho.de>

--- a/partials/standardheader.html
+++ b/partials/standardheader.html
@@ -5,7 +5,7 @@
   -->
   <link href="/src/header.css" type="text/css" rel="stylesheet" hidden />
   <script type="module" src="/src/header.ts" hidden></script>
-  <h1><a href="/">Einkaufshelfer</a></h1>
+  <h1><a id="homeLink" href="/">Einkaufshelfer</a></h1>
   <div id="headerPageTitle">{=$pageTitle}</div>
   <div id="headerGlobalActions">
     <a id="headerUserInfo" href="/settings.html"></a>
