--- a/src/login.css
+++ b/src/login.css
@@ -6,14 +6,13 @@
 main {
     margin-left: auto;
     margin-right: auto;
-    display: flex;
     width: fit-content;
 }
 
 form button {
     margin-left: auto;
     margin-right: auto;
-    display: flex;
+    display: block;
     margin-top: 1em;
 }
 
@@ -25,6 +24,13 @@ form label {
 
 form input {
     margin-top: 1em;
+}
+
+form {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: .5em;
 }
 
 #error {
