feat: implement OpenID Connect login via id.jotoho.de
Using this, users registered on my personal Keycloak instance will be
able to reuse their credentials or use its WebAuthn support.

Closes: https://github.com/jotoho/Einkaufshelfer/issues/40
Signed-off-by: Jonas Tobias Hopusch <git@jotoho.de>

--- a/partials/standardheader.html
+++ b/partials/standardheader.html
@@ -1,3 +1,8 @@
+<noscript>
+  Diese Webanwendung erwartet, dass unser JavaScript uneingeschränkt ausgeführt werden kann
+  und dass Netzwerkanfragen an unser Backend gestattet sind.
+  Falls nicht, wird diese Anwendung nicht funktionieren!
+</noscript>
 <header id="pageHeader" class="standardheader">
   <!--
     SPDX-License-Identifier: AGPL-3.0-only
