--- a/src/global.css
+++ b/src/global.css
@@ -85,6 +85,15 @@ h6 {
   padding: 1em;
 }
 
+noscript:has(+ header.standardheader) {
+  display: block;
+  width: 100%;
+  text-align: center;
+  color: rgb(50% 0% 0% / 100%);
+  border: 1px solid rgb(50% 0% 0% / 100%);
+  font-weight: bold;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     scrollbar-color: black transparent;
